cmake_minimum_required(VERSION 3.17)
project(housingregistrationsystem)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -D_GLIBCXX_DEBUG")
add_executable(housingregistrationsystem main.cpp "${CMAKE_CURRENT_BINARY_DIR}/input.txt" Street.cpp Street.h Building.cpp Building.h House.cpp House.h Suffix.cpp Suffix.h ApartmentBuilding.cpp ApartmentBuilding.h Apartment.cpp Apartment.h)
configure_file(input.txt input.txt COPYONLY)